--- a/timer.css
+++ b/timer.css
@@ -52,3 +52,12 @@ button {
   padding-bottom: 1rem;
   padding-top: -1rem;
 }
+
+.footer a {
+  color: #3730a3;
+}
+
+.footer {
+  text-align: center;
+  margin-top: 23rem;
+}
