--- a/timer.css
+++ b/timer.css
@@ -63,27 +63,7 @@ button {
 }
 
 @media only screen and (max-width: 500px) {
-  .main {
-    display: flex;
-    justify-content: center;
-  }
-
   .put-value {
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-  }
-
-  .container {
-    display: block;
-  }
-  .start-btn {
-    display: flex;
-    justify-content: center;
-  }
-
-  .timer {
-    display: flex;
-    justify-content: center;
+    margin-left: -1.5rem;
   }
 }
